# commiter

./: .gitignore  pyproject.toml
commiter/: main.py
commiter/commands/: commit.py  config.py
commiter/config/: __init__.py  config_files.py  env_vars.py
commiter/config/fields_data/: gitmojis.py  types.py
